<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!-- ************ -->

        <TextView
            android:id="@+id/labelaIme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelProizvodjac" />

        <EditText
            android:id="@+id/proizvodjac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp" />

        <!-- ************ -->

        <TextView
            android:id="@+id/labelModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelModel" />

        <EditText
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp" />
        <!-- ************ -->

        <TextView
            android:id="@+id/labelSnaga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelSnaga" />

        <EditText
            android:id="@+id/snaga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp" />

        <!-- ************ -->

        <TextView
            android:id="@+id/labelZapremnina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelZapremnina" />

        <EditText
            android:id="@+id/zapremnina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp" />

        <Button
            android:id="@+id/noviMotor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelNovi" />

        <Button
            android:id="@+id/uslikajMotor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelUslikaj" />

        <Button
            android:id="@+id/promjeniMotor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelPromjeni" />

        <Button
            android:id="@+id/obrisiMotor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelObrisi" />

        <Button
            android:id="@+id/nazad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelNazad" />

        <ImageView
            android:id="@+id/slikaCUD"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>